Dropdown menus: selected check mark is now visible. Fixes #156

--- a/github-dark.css
+++ b/github-dark.css
@@ -215,9 +215,6 @@
   .diagram-icon-small, .commit-timeline-listing .commit-group-title .octicon-git-commit, #readme .highlight {
     background: transparent !important;
   }
-  .select-menu-item:not(.js-repo-search-filter) .octicon:before {
-    color: transparent !important;
-  }
   /* Redeem Page */
   .coupons .coupon-form-body {
     background-image: none !important;
@@ -845,11 +842,11 @@
   .markdown-body strong, .button .octicon:before, .minibutton .octicon:before, #gist-form label, h2 span, ul.repo-stats li a:hover,
   .subnav li a:hover, .filters li.selected a, .filters li a:hover, .code-list em, .header-anchor, .commandbar .choice .command,
   .search-term, .codesearch-cols em, .image, .selector-item:hover .mini-icon:before, .selector-item.selected .mini-icon:before,
-  .new-repo .octicon, .header a, .header span, .select-menu-item.selected>.mini-icon, .sunken-menu a.selected .octicon,
+  .new-repo .octicon, .header a, .header span, .select-menu-item.selected>.octicon, .sunken-menu a.selected .octicon,
   .feed-icon a .octicon, .release-label a, .minibutton i, .minibutton:hover .octicon, .tabnav-tab.selected .octicon,
   .merge-status-icon .mega-octicon:before, .commit .mini-icon:before, .sidebar-milestone-widget .title,
   .notifications .pull-request-notification .type-icon, div.select-menu-modal a.select-menu-item-text, .full-commit .browse-button,
-  .numbers-summary .num, .select-menu-item > .octicon, #network .explain b,.sunken-menu-group li:hover .octicon,
+  .numbers-summary .num, #network .explain b,.sunken-menu-group li:hover .octicon,
   .dashboard-tabs a.selected,.markdown-body h1, .markdown-body h2, .markdown-body h3, .markdown-body h4,
   .dropdown-menu > li > a:hover, .message .time, #graph_data .tab.selected a, .explore-section .mega-octicon:before,
   .explore-collection .see-more-link, ul.color-label-list .count, a.filter-tab.selected, .pagination a,
